Fixed login button
Fixed login button

--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,28 @@ option:checked, option:hover, option:focus, option:active, option:checked:after 
 	color: #212124;
 }
 
+.login-button {
+    text-align: center;
+	border: none;
+	color: white;
+	font-family: 'Roboto Mono';
+	font-size: 14px; 
+	background-color: black;
+	text-decoration: underline;
+	outline: none;
+}
+
+.login-button:hover {
+    text-align: center;
+	border: none;
+	color: black;
+	font-family: 'Roboto Mono';
+	font-size: 14px; 
+	background-color: white;
+	text-decoration: underline;
+	outline: none;
+}
+
 .content {
 }
 
